# zoteroRAG

./: .gitignore  .python-version  README.md  app.py  highlighter.py  indexer.py  models.py  pdf_processor.py  pyproject.toml  qa_engine.py  reranker.py  zotero_db.py  zotero_rag.py
example_configs/: advanced_config.yaml  example_config.yaml  folder_example_config.yaml  highlighter_colors.html  question_type_presets.yaml
zotero_rag/: app.py  collection_pdf_exporter.py  folder_source.py  highlighter.py  models.py  qa_engine.py  run_from_config.py  zotero_rag.py
